# ML_Evaluacion2

./: README.md
f1kedro/: .gitignore  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml  requirements.txt
f1kedro/conf/: logging.yml
f1kedro/conf/base/: catalog.yml
f1kedro/dags/: kedro_f1_dag.py
f1kedro/data/: 01_raw.dvc  06_models.dvc  08_reporting.dvc
f1kedro/notebooks/: 01_classification_analysis.ipynb  02_regression_analysis.ipynb  03_models_comparison.ipynb
f1kedro/src/f1kedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
f1kedro/src/f1kedro/pipelines/classification/: nodes.py  pipeline.py
f1kedro/src/f1kedro/pipelines/ingestion/: nodes.py  pipeline.py
f1kedro/src/f1kedro/pipelines/regression/: nodes.py  pipeline.py
